# github-toolkit-test

./: README.md  conf.yml  deploy.sh  deploy_spec.json  launch.sh  pyproject.toml  requirements.txt  setup.py
.dbx/: project.json
.github/workflows/: deploy_dbx.yml  job2.yml
github_toolkit/: auth.py  script.py
scripts/: script1.py  script2.py
